overflow problem fixed

--- a/css/reserveer.css
+++ b/css/reserveer.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
     background-color: black;
     background-image: url(/imagess/gray_background.png);
-    background-size: 50%;
+    background-size: 80%;
     background-repeat: no-repeat;
     background-position: 50%;
 }
@@ -242,6 +242,15 @@ body {
 
     }
 }
+
+@media (max-width: 400px) {
+  .form-container .radio-group {
+    flex-direction: column;
+}  
+}
+
+
+/* kalender code */
 
 * {
     margin: 0;
